2011-05-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * doc/geany.txt, doc/geany.html:
   Update the documentation for project patterns and recent FIF dialog
   changes.


2011-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, doc/geany.txt, doc/geany.html:
   Allow translations for color scheme [theme_info] keys.
 * src/build.c, src/filetypes.c, src/filetypes.h, src/main.c:
   Save filetype build commands straight after editing them instead of
   at shutdown (patch by Dimitar Zhekov, thanks).


2011-05-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/plugindata.h:
   Bump plugin API version so a plugin can know the project file
   patterns are visible by the user.


2011-05-01  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/search.c:
   Fix pattern filtering when not searching in subdirectories.


2011-04-30  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/project.c:
   Fix project patterns and make them visible (based on a patch
   by Jiří Techet, thanks).
 * src/search.c:
   Use project patterns in the FIF dialog (based on a patch
   by Jiří Techet, thanks).
 * src/msgwindow.c:
   Open the file in the msgwindow even if no line number is specified.


2011-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, data/filetype_extensions.conf:
   Revert 'Compiled' filetype group back to 'Programming' (couldn't
   agree on whether e.g. Java is a compiled language).
 * doc/geany.txt, doc/geany.html:
   Add section 'Filetype group membership'.
 * src/highlighting.c, doc/geany.txt, doc/geany.html,
   data/colorschemes/alt.conf:
   Read color scheme name and description for menu item label and
   tooltip (based on patch by Matthew Brush, thanks).


2011-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h:
   Remove now unnecessary Custom filetype group.
 * src/filetypes.c: